# RCAIDE_Lattice_Boltzman_Method

./: .gitignore  README.md  lbm_jax.py  main.py  pyproject.toml  requirements.txt  todo.txt
RLBM/: case.py  main.py
RLBM/mesher/: __init__.py  create_mesh_2D.py  create_mesh_3D.py  mesh.py
RLBM/solver/: __init__.py  solver1d.py  solver2d.py  solver3d.py
RLBM/solver/schemes/: D1Q3.py  D2Q5.py  D2Q9.py  D3Q15.py  D3Q19.py  D3Q27.py  D3Q7.py  __init__.py  scheme.py
tutorials/: simple_2D_diffusion.py
