[project]
name = "rlbm"
version = "0.1.0"
description = ""
authors = [
    {name = "Aadit Kolar",email = "aaditvk2@illinois.edu"}
]
license = {text = "GNU Affero"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "jax (>=0.7.2,<0.8.0)",
    "warp (>=1.0.4,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "flax (>=0.12.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
